--- a/index.html
+++ b/index.html
@@ -5,27 +5,38 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Bootstrap Practice</title>
+  <!-- Bootstrap CSS file -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="index.css">
 </head>
 <body>
-  <h1>Hello World!</h1>
   <div class="container">
     <!--Row with two equal columns-->
     <div class="row">
-      <div class="col-md-6">Column Left</div>
-      <div class="col-md-6">Column Right</div>
+      <div class="col-md-6 block">Column Left
+        <div class="inner">col-md-6</div>
+      </div>
+      <div class="col-md-6 block">Column Right
+        <div class="inner-alt">cold-md-6</div>
+      </div>
     </div>
 
     <!-- Row with two columns divided in a 1:2 ratio -->
     <div class="row">
-      <div class="col-md-4">Column Left</div>
-      <div class="col-md-8">Column Right</div>
+      <div class="col-md-4 block">Column Left</div>
+      <div class="col-md-8 block">Column Right</div>
     </div>
 
     <!-- Row with two columns in 2:3 ratio -->
     <div class="row">
-      <div class="col-md-3">Column Left</div>
-      <div class="col-md-9">Column Right</div>
+      <div class="col-md-3 block">Column Left</div>
+      <div class="col-md-9 block">Column Right</div>
     </div>
   </div>
+
+  <!-- JS files: jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
