Continuing practice: overflow.

--- a/index.html
+++ b/index.html
@@ -32,6 +32,41 @@
       <div class="col-md-3 block">Column Left</div>
       <div class="col-md-9 block">Column Right</div>
     </div>
+
+    <!-- Row with two equal columns -->
+    <div class="row">
+      <div class="col">
+        <div class="inner">col</div>
+      </div>
+      <div class="col">
+        <div class="inner-alt">col</div>
+      </div>
+    </div>
+
+    <!-- Row with three equal columns -->
+    <div class="row">
+      <div class="col">
+        <div class="inner">col</div>
+      </div>
+      <div class="col">
+        <div class="inner-alt">col</div>
+      </div>
+      <div class="col">
+        <div class="inner">col</div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-4 col-lg-3">
+        <div class="inner-alt">col</div>
+      </div>
+      <div class="col-md-8 col-lg-6">
+        <div class="inner">col</div>
+      </div>
+      <div class="col-md-12 col-lg-3">
+          <div class="inner-alt">col</div>
+      </div>
+    </div>
   </div>
 
   <!-- JS files: jQuery first, then Popper.js, then Bootstrap JS -->
